@@ -1,3 +1,11 @@
+06/08/2006  Ian Lewis   <IanLewis@member.fsf.org>
+
+    * XMLAttribute was added to the new data model.
+    * Added support for editing attributes to the XMLElement class.
+    * Created an new XMLDocument class.
+    * Made use of the DOM events model to allow users to register DOM event
+      listeners.
+
 06/04/2006  Ian Lewis   <IanLewis@member.fsf.org>
 
     * XMLElement was added to model element nodes
